@@ -12,7 +12,6 @@
 #if defined(__BORLANDC__) || defined (__BCPLUSPLUS__)
 #include "irrMath.h"    // needed by borland for sqrtf define
 #endif
-#include <d3d9.h>
 #include <d3dx9shader.h>
 
 #include "IMaterialRenderer.h"
