@@ -105,7 +105,7 @@ namespace os
 #if !defined(_WIN32_WCE) && !defined (_IRR_XBOX_PLATFORM_)
 			// Avoid potential timing inaccuracies across multiple cores by
 			// temporarily setting the affinity of this process to one core.
-			DWORD_PTR affinityMask;
+			DWORD_PTR affinityMask=0;
 			if(MultiCore)
 				affinityMask = SetThreadAffinityMask(GetCurrentThread(), 1);
 #endif
